# MLOps

./: .gitignore  README.md  pyproject.toml
config/: tracker.yaml
data/: constants.py
forecasting_with_mlops/: evaluation_metrics.py  generation_constraints.py  generation_postprocessing.py  mlflow_tracker.py  temporalgnn_data.py  temporalgnn_evaluation.py  temporalgnn_model.py
forecasting_with_mlops/models/: train_neuralprophet_model.py  train_temporalgnn.py
reference/: prophet_model_config.yaml
